# SLT

./: .gitignore  README.md  environment.yml  pyproject.toml  secrets.conf.template
kubernetes/: kubeflow-train-job.yaml
src/: train.py
src/model/: __init__.py  callbacks.py  video_mae.py
src/utils/: README.md  __init__.py  dataloader.py  datamodule.py  dataset.py  transforms.py
