[project]
name = "slt"
version = "0.1.0"
description = "Training job for SLT based on VideoMAE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "decord>=0.6.0",
    "lightning>=2.5.2",
    "mlflow>=3.1.1",
    "onnx>=1.18.0",
    "pandas>=2.3.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
]


[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
